tooltip fixed and links updated

--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="container">
-    <p>Don't have an account yet? <a href="#">Create one here.</a></p>
+    <p>Don't have an account yet? <a href="register.html">Create one here.</a></p>
 </div>
 
 <div class="container">
