upload files better multiple

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Loginly - Login in</title>
+  <title>Loginly - Log In</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit=no>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -14,10 +14,11 @@
 <nav class="justify-content-end fixed-top navbar navbar-expand-sm bg-dark">
     <ul class="nav">
         <li class="nav-item">
-            <a class="text-light nav-link" href="#">Contact</a>
+        	 <!-- we need to update this -->
+            <a class="text-light nav-link" href="https://live.hackupc.com">Contact</a>
         </li>
         <li class="nav-item">
-            <a class="text-light nav-link" href="#">Sign up</a>
+            <a class="text-light nav-link" href="register.html">Sign up</a>
         </li>
     </ul>
 </nav>
