--- a/register.html
+++ b/register.html
@@ -8,17 +8,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+
+  <link rel="stylesheet" href="css/upload.css">
 </head>
 <body>
 
 <nav class="justify-content-end fixed-top navbar navbar-expand-sm bg-dark">
     <ul class="nav">
         <li class="nav-item">
-            <a class="text-light nav-link" href="#">Contact</a>
+          <!-- we need to update this -->
+            <a class="text-light nav-link" href="https://live.hackupc.com">Contact</a> 
         </li>
         <li class="nav-item">
-            <a class="text-light nav-link" href="#">Sign up</a>
+            <a class="text-light nav-link" href="login.html">Log In</a>
         </li>
     </ul>
 </nav>
@@ -47,19 +49,12 @@
               $('[data-toggle="tooltip"]').tooltip();   
             });
             </script>
-            <!-- used emmet to generate this: div.uploaddir>((button{Insert Image $ here})+(input[type="file" name="image$"].form-control#image$))*10 -->
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 1 here</button><input type="file" name="image1" class="form-control" id="image1"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 2 here</button><input type="file" name="image2" class="form-control" id="image2"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 3 here</button><input type="file" name="image3" class="form-control" id="image3"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 4 here</button><input type="file" name="image4" class="form-control" id="image4"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 5 here</button><input type="file" name="image5" class="form-control" id="image5"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 6 here</button><input type="file" name="image6" class="form-control" id="image6"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 7 here</button><input type="file" name="image7" class="form-control" id="image7"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 8 here</button><input type="file" name="image8" class="form-control" id="image8"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 9 here</button><input type="file" name="image9" class="form-control" id="image9"></div>
-            <div class="uploaddir"><button class="btn-file-input">Insert Image 10 here</button><input type="file" name="image10" class="form-control" id="image10"></div>
-           
-        
+            <!-- used emmet to generate this: div.row>(div.col-sm-3>(div.uploaddir>((button{Insert Image $ here})+(input[type="file" name="image$"].form-controlfile#image$)))*4)*3 -->
+            <div class="box">
+          <input style="display: none;" type="file" name="file-1[]" id="file-1" class="inputfile" data-multiple-caption="{count} files selected" multiple />
+          <label for="file-1"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg> <span>Choose a file&hellip;</span></label>
+        </div>
+            <!-- script to display image's name -->
         <div>
             <button type="button" class="m-3 btn-secondary">Submit</button>
         </div>
@@ -83,6 +78,6 @@
             memorizing lengthy passcodes.
         </p>
 </div>
-
+<script src="js/custom-file-input.js"></script>
 </body>
 </html>
