--- a/register.html
+++ b/register.html
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="css/upload.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
