--- a/login.html
+++ b/login.html
@@ -57,11 +57,14 @@
             <canvas id="canvas" class="d-none"></canvas>
             <audio id="snapSound" src="audio/snap.wav" preload = "auto"></audio>
         </div>
+        <br>
+        <button type="button" class="btn btn-primary" onclick="snap();"><i class="fas fa-camera"></i>  Snap!</button>
         <div class="form-group form-check">
             <label class="m-3 form-check-label">
                 <input class="form-check-input" type="checkbox" name="remember">
                 Remember me </label>
         </div>
+        <p id="download-photo"></p>
     </form>
 </div>
 
@@ -85,9 +88,16 @@
       console.log("webcam started");
    })
    .catch(err => {
-       document.getElementById('errorcamera').innerHTMl = "Permission denied to camera. Please allow it to login in"
+       document.getElementById('errorcamera').innerHTML = "Permission denied to camera. Please allow it to login in"
        console.log(err);
    });
+function snap() {
+
+  var picture = webcam.snap();
+  document.querySelector('#download-photo').innerHTML = picture;
+  return picture;
+
+}
 </script>
 </body>
 </html>
