--- a/login.html
+++ b/login.html
@@ -53,18 +53,21 @@
         <div>
             <label>Take a Photo: <b style="color:red;">*</b></label><br>
             <p id="errorcamera" class="error"></p>
-            <video class="cameradisplay" id="webcam" autoplay playsinline width="640" height="480"></video>
-            <canvas id="canvas" class="d-none"></canvas>
+            <div id="loading"><img height="20" width="20" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.wpfaster.org%2Fwp-content%2Fuploads%2F2013%2F06%2Floading-gif.gif&f=1&nofb=1" alt=""> Waiting for camera permision...</div>
+            <video style="display: none;" class="cameradisplay" id="webcam" autoplay playsinline width="640" height="480"></video>
+            <canvas style="display: none;" id="canvas" class="d-none"></canvas>
             <audio id="snapSound" src="audio/snap.wav" preload = "auto"></audio>
         </div>
         <br>
-        <button type="button" class="btn btn-primary" onclick="snap();"><i class="fas fa-camera"></i>  Snap!</button>
+        <button id="snapbutton" type="button" style="display: none;" class="btn btn-primary" onclick="snap();"><i class="fas fa-camera"></i>  Snap!</button>
+        <img id="download-photo"></img>
+        <button type="button" style="display: none; margin-top: 15px;" class="btn btn-warning" id="turnonagaincamera" onclick="turnon();"><i class="fas fa-redo"></i>  Repeat</button>
         <div class="form-group form-check">
             <label class="m-3 form-check-label">
                 <input class="form-check-input" type="checkbox" name="remember">
                 Remember me </label>
         </div>
-        <p id="download-photo"></p>
+        <button type="submit" class="btn btn-success"> Log In</button>
     </form>
 </div>
 
@@ -83,20 +86,34 @@
 <script type="text/javascript">
   
 
+ turnon();
+function snap() {
+
+  var picture = webcam.snap();
+  document.querySelector('#download-photo').src = picture;
+  document.querySelector('#snapbutton').style.display = "none";
+  document.querySelector('#webcam').style.display = "none";
+  document.querySelector('#canvas').style.display = "none";
+  document.querySelector('#turnonagaincamera').style.display = "block";
+  
+  return picture;
+
+}
+
+function turnon(){
   webcam.start()
    .then(result =>{
       console.log("webcam started");
+       document.querySelector('#snapbutton').style.display = "block";
+       document.querySelector('#turnonagaincamera').style.display = "none";
+       document.querySelector('#webcam').style.display = "block";
+       document.querySelector('#canvas').style.display = "block";
+       document.querySelector('#loading').style.display = "none";
    })
    .catch(err => {
        document.getElementById('errorcamera').innerHTML = "Permission denied to camera. Please allow it to login in"
        console.log(err);
    });
-function snap() {
-
-  var picture = webcam.snap();
-  document.querySelector('#download-photo').innerHTML = picture;
-  return picture;
-
 }
 </script>
 </body>
