revert changes of david

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <a class="text-light nav-link" href="https://live.hackupc.com">Contact</a>
         </li>
         <li class="nav-item">
-            <a class="text-light nav-link" href="register.html">Sign up</a>
+            <a class="text-light nav-link" href="index.html">Sign up</a>
         </li>
     </ul>
 </nav>
@@ -45,7 +45,7 @@
 
 <div class="container">
     <h3>Log-in Information</h3>
-    <form action="/action_page.php">
+    <form action="loginhandle.php">
         <div class="m-3 form-group">
             <label for="email">Email: <b style="color:red;">*</b></label>
             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required=""> 
@@ -72,7 +72,7 @@
 </div>
 
 <div class="container">
-    <p>Don't have an account yet? <a href="register.html">Create one here.</a></p>
+    <p>Don't have an account yet? <a href="index.html">Create one here.</a></p>
 </div>
 
 <div class="container">
