i got to sleep here's the whooe code i wrote

--- a/login.html
+++ b/login.html
@@ -46,10 +46,10 @@
 <div class="container">
     <h3>Log-in Information</h3>
     <form action="loginhandle.php" method="POST" enctype='multipart/form-data'>
-        <div class="m-3 form-group">
+        <!-- <div class="m-3 form-group">
             <label for="email">Email: <b style="color:red;">*</b></label>
             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required=""> 
-        </div>
+        </div> -->
         <div>
             <label>Take a Photo: <b style="color:red;">*</b></label><br>
             <p id="errorcamera" class="errorcam"></p>
